--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-app",
-  "homepage": "https://AlcoKD.github.io/StramerWebPage/",
+  "homepage": "https://alcokd.github.io/StramerWebPage/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
